Verify ID / First Step / Fixed the style

--- a/src/styles/sass/page/_verify.scss
+++ b/src/styles/sass/page/_verify.scss
@@ -7,9 +7,6 @@
     section {
         @extend %set-height2;
         overflow: auto;
-        .trees-img {
-            display: block;
-        }
     }
     .step {
         &-bar {
@@ -209,10 +206,10 @@
             }
         }
         &-step1 {
-            max-width: 365px;
             margin: 0 auto;
         }
-        &-step2 {
+        &-step2,
+        &-step1 {
             // margin-bottom: -30px;
             .upload {
                 &-doc {
@@ -664,5 +661,20 @@
                 }
             }
         }
+    }
+}
+
+.requirements {
+    margin-top: 40px;
+    .small-white-dot {
+        background-color: #dadada;
+        width: 5px;
+        height: 5px;
+        border-radius: 50%;
+    }
+    .item {
+        opacity: 0.85;
+        font-size: 14px;
+        line-height: 24px;
     }
 }
