--- a/src/styles/sass/page/_history.scss
+++ b/src/styles/sass/page/_history.scss
@@ -821,10 +821,9 @@
 }
 
 .wallet-transaction-table {
-    .green-bullet {
+    .bullet {
         width: 10px;
         height: 10px;
-        background-color: $green;
         border-radius: 100%;
     }
 }
