save avatar components

--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -50,6 +50,12 @@ input[type="number"]::-webkit-outer-spin-button {
 .border-transparent {
     border-color: transparent !important;
 }
+.border-cyan {
+    border-color: cyan !important;
+}
+.border-grey {
+    border-color: grey !important;
+}
 .overflow-x-auto {
     overflow-x: auto !important;
     white-space: nowrap;
