Wallet / Withdraw / Now we show the details after selecting an asset

--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -188,4 +188,7 @@ input[type="number"]::-webkit-outer-spin-button {
 .bg-gray {
     background: $grey;
 }
+.mt-1 {
+    margin-top: 1px !important;
+}
 //End: Background Color
