--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -26,6 +26,7 @@
             &__avatar {
                 width: 123.42px;
                 height: 93.17px;
+                margin: auto;
             }
             &__name {
                 display: flex;
