--- a/src/styles/sass/components/_menu.scss
+++ b/src/styles/sass/components/_menu.scss
@@ -5,7 +5,7 @@
     padding: 22px;
     background-color: $black;
     z-index: 9999;
-    .avatar-component {
+    .image_div {
         width: 50px;
     }
     .header-right-side {
