--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -188,6 +188,7 @@
                 margin-right: 8px;
                 .css-1s2u09g-control,
                 .css-1pahdxg-control {
+                    padding: 0 0 !important;
                     .css-1d8n9bt {
                         padding-top: 0;
                         padding-bottom: 0;
@@ -195,6 +196,11 @@
                     .css-ackcql {
                         input {
                             caret-color: transparent;
+                        }
+                    }
+                    .coin-label {
+                        @include mq("phone", max) {
+                            display: none;
                         }
                     }
                 }
@@ -211,7 +217,6 @@
                         line-height: 22px !important;
                         text-transform: uppercase !important;
                         color: white !important;
-                        margin-left: 11px !important;
                     }
                 }
             }
@@ -228,6 +233,11 @@
                     line-height: 20px;
                     color: black;
                 }
+                @include mq("laptop-md", max) {
+                    code {
+                        font-size: 13px;
+                    }
+                }
                 @include mq("laptop", max) {
                     padding: 10px;
                     code {
@@ -238,11 +248,15 @@
             }
             .qr-code {
                 text-align: center;
-                @include mq("tablet", max) {
-                    margin-top: 26px;
-                    img {
-                        width: 179px;
-                        height: 179px;
+                svg {
+                    width: 115.95px;
+                    height: 115.95px;
+                }
+                @include mq("phone", max) {
+                    margin-top: 23px;
+                    svg {
+                        width: 132px;
+                        height: 132px;
                     }
                 }
             }
@@ -513,9 +527,6 @@
     }
 }
 
-.css-qc6sy-singleValue {
-    margin: auto !important;
-}
 .css-14el2xx-placeholder {
     color: white !important;
     font-weight: bold;
@@ -530,5 +541,19 @@
     justify-content: center;
     @include mq("phone", max) {
         height: auto;
+    }
+    .set-cryptocoin {
+        display: flex;
+        justify-content: space-between;
+        .coin-address {
+            width: calc(100% - 139.95px);
+            @include mq("phone", max) {
+                display: block;
+                width: 100%;
+            }
+        }
+        @include mq("phone", max) {
+            display: block;
+        }
     }
 }
