Select Figure / Items / Fixed the design and using the api data now

--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -192,3 +192,7 @@ input[type="number"]::-webkit-outer-spin-button {
     margin-top: 1px !important;
 }
 //End: Background Color
+
+.scale-70 {
+    transform: scale(0.7, 0.7);
+}
