--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -292,6 +292,17 @@
                                 text-decoration: underline;
                             }
                         }
+                        .security-item-disable {
+                            margin-right: 10px;
+                            margin-top: 18px;
+                            .security-link {
+                                cursor: pointer;
+                                font-size: 13px;
+                                font-weight: 500;
+                                color: red;
+                                text-decoration: underline;
+                            }
+                        }
                     }
                 }
             }
