--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -1,12 +1,17 @@
 .payment-page {
     .payment-wrapper {
         padding-top: 100px;
+        padding-left: 60px;
+        padding-right: 60px;
         @include mq("tablet", max) {
             padding-top: 75px;
         }
         @include mq("phone", max) {
             padding-top: 65px;
+            padding-left: 0;
+            padding-right: 0;
         }
+
     }
     & > section {
         .title {
@@ -38,8 +43,6 @@
         display: none;
     }
     .payment-type__tab {
-        padding: 0 60px;
-        padding-right: 20px;
         @include mq("tablet", max) {
             padding: 0;
         }
@@ -244,16 +247,17 @@
             }
             .qr-code {
                 text-align: center;
-                svg {
-                    width: 115.95px;
-                    height: 115.95px;
+                width: 110px;
+                height: 110px;
+                img {
+                    width: 100%;
+                    height: auto;
                 }
                 @include mq("phone", max) {
-                    margin-top: 23px;
-                    svg {
-                        width: 132px;
-                        height: 132px;
-                    }
+                    width: 130px;
+                    height: 130px;
+                    margin: auto;                    
+                    margin-top: 20px;
                 }
             }
         }
