--- a/src/styles/sass/page/purchase/home.scss
+++ b/src/styles/sass/page/purchase/home.scss
@@ -1,24 +1,28 @@
 main.purchase-page {
     .menu {
-        background:black;
+        background: black;
     }
     .home-section {
         height: 100vh;
-        background-color:black ;
+        background-color: black;
         display: flex;
         align-items: center;
         @media screen and (max-width: 768px) {
             height: 100vh;
-            background: radial-gradient(37.36% 30.86% at 38.06% 59.62%, rgba(0, 0, 0, 0) 0%, #000000 100%);
+            background: radial-gradient(
+                37.36% 30.86% at 38.06% 59.62%,
+                rgba(0, 0, 0, 0) 0%,
+                #000000 100%
+            );
         }
         @media screen and (max-width: 575px) {
+            align-items: center;
             .btn-desktop {
                 display: none !important;
             }
             .btn-mobile {
-                margin: 0px 5vw;
+                margin: 0px 8px;
             }
-        
         }
         @media screen and (min-width: 576px) {
             .btn-mobile {
@@ -28,8 +32,7 @@ main.purchase-page {
                 margin-left: 5vw;
             }
         }
-        
-        
+
         div.container {
             width: 100%;
             div.row {
@@ -60,7 +63,6 @@ main.purchase-page {
                         font-weight: 700;
                     }
                     @media screen and (max-width: 1480px) {
-                        
                         h4.title1 {
                             font-size: 24px;
                         }
@@ -77,21 +79,23 @@ main.purchase-page {
                         }
                     }
                     @media screen and (max-width: 575px) {
-                        max-width:350px;
+                        // max-width:350px;
                         text-align: center;
                         align-items: center !important;
+                        padding: 0 20px;
                         h4.title1 {
-                            font-size: 24px;
-                            margin: 10px 0px
+                            font-size: 22px;
+                            margin: 10px 0px;
                         }
                         h3.title2 {
-                            font-size: 48px;
-                            margin: 10px 0px
+                            font-size: 50px;
+                            margin: 10px 0px;
                         }
                         p.text {
-                            max-width:290px;
-                            font-size: 12px;
-                            margin: 10px 0px
+                            // max-width:290px;
+                            font-size: 16px;
+                            margin: 10px 25px;
+                            text-align: left;
                         }
                         button.btn-green {
                             margin-top: 20px;
@@ -104,37 +108,39 @@ main.purchase-page {
                 .col-sm-5 {
                     div.hero-image {
                         width: 100%;
-                        height:530px;
+                        height: 530px;
                         display: flex;
-                        justify-content:center;
+                        justify-content: center;
                         align-items: center;
                         background-image: url("../../images/green-coin.svg");
                         background-repeat: no-repeat;
                         background-size: contain;
                         img {
                             width: 100%;
-                            
                         }
                     }
                     .text-left {
                         font-size: 24px;
                         line-height: 29px;
                         font-variant: small-caps;
-                        color: #FFFFFF;
+                        color: #ffffff;
                     }
-                    @media screen and (max-width: 575px){
+                    @media screen and (max-width: 575px) {
+                        padding: 0 20px;
                         div.hero-image {
                             width: 100%;
-                            height: 206px;
+                            height: 200px;
                             justify-content: start;
-                            background-position: -53px 61px;
-                            background-image: radial-gradient(37.36% 30.86% at 38.06% 59.62%, rgba(0, 0, 0, 0) 0%, #000000 100%), url("../../images/green-coin-mobile.svg");
-                            .text-left {
-                            font-weight: bold;
-                            font-size: 24px;
-                            line-height: 29px;
-                            font-variant: small-caps;
-                            color: #FFFFFF;
+                            background-position: -30px 70px;
+                            div {
+                                width: 100%;
+                                .text-left {
+                                    font-weight: bold;
+                                    font-size: 24px;
+                                    line-height: 29px;
+                                    font-variant: small-caps;
+                                    color: #ffffff;
+                                }
                             }
                         }
                     }
