--- a/src/styles/sass/page/purchase/auction.scss
+++ b/src/styles/sass/page/purchase/auction.scss
@@ -94,7 +94,12 @@ main.purchaseAuction-page {
                             color: white;
                             text-align: center;
                         }
-
+                        .symbol-label {
+                            color: $green;
+                            font-size: 30px;
+                            font-weight: 600;
+                            margin-bottom: 0;
+                        }
                         @media screen and (max-width: 768px) {
                             & > div.price {
                                 width: 60%;
@@ -125,11 +130,7 @@ main.purchaseAuction-page {
                             font-size: 20px;
                             left: 0;
                             top: 12px;
-                            @media screen and (max-width: 768px) {
-                                font-size: 12px;
-                                top: 6px;
-                            }
-                            @include mq("phone", max) {
+                            @include mq("tablet", max) {
                                 display: none;
                             }
                         }
