--- a/src/styles/sass/page/_verify.scss
+++ b/src/styles/sass/page/_verify.scss
@@ -232,6 +232,17 @@
         }
         &-step1 {
             margin: 0 auto;
+            div.MuiFormControl-root {
+                background-color: #ffffff;
+            }
+            div.MuiFormControl-root div.MuiOutlinedInput-root {
+                border: 1px solid #ced4da;
+                height: 38px;
+                border-radius: 0;
+                color: black;
+                font-size: 14px;
+                width: 100%;
+            }
         }
         &-step2,
         &-step1 {
