--- a/src/styles/sass/layout/_layout.scss
+++ b/src/styles/sass/layout/_layout.scss
@@ -4,8 +4,10 @@
     top: 0;
     width: 100%;
     z-index: 100;
+    height: 100px;
     @include mq("tablet", max) {
-        padding: 9px 0;
+        padding: 9px 0; 
+        height: 75px;
     }
     @include mq("phone", max) {
         padding: 15px 0;
