--- a/src/styles/sass/page/_history.scss
+++ b/src/styles/sass/page/_history.scss
@@ -263,10 +263,10 @@
                     }
                 }
                 &__tab {
-                    text-transform: uppercase;
-                    font-weight: bold;
-                    font-size: 18px;
-                    line-height: 22px;
+                    font-weight: 700;
+                    font-variant: small-caps;
+                    font-size: 23px;
+                    line-height: 27px;
                     color: #757575;
                     &--selected {
                         background: unset;
@@ -466,6 +466,11 @@
                 height: 22px;
                 margin-top: 4px;
                 margin-right: 18px;
+            }
+            .stake-react-list__tab {
+                .react-tabs__tab {
+                    font-weight: 500 !important;
+                }
             }
         }
     }
