--- a/src/styles/sass/components/_menu.scss
+++ b/src/styles/sass/components/_menu.scss
@@ -325,8 +325,9 @@
 
 .header-avatar-user-tier {
     position: absolute;
-    bottom: 10px;
-    right: 5px;
+    bottom: 5px;
+    right: 22px;
     height: 10px;
-    transform: scale(0.55);
+    width: 10px;
+    transform: scale(0.35);
 }
