fix 2FA-modal limit app and phone

--- a/src/styles/sass/page/_signup.scss
+++ b/src/styles/sass/page/_signup.scss
@@ -221,6 +221,9 @@
                         &:focus {
                             box-shadow: unset;
                         }
+                        &:disabled {
+                            opacity: 0.5;
+                        }
                     }
                 }
             }
