--- a/src/styles/sass/page/_support.scss
+++ b/src/styles/sass/page/_support.scss
@@ -69,7 +69,7 @@
             max-width: 470px;
         }
         &-list {
-            margin: 0 65px 0 35px;
+            margin: 0 35px 0 35px;
             flex-shrink: 0;
             @include mq("laptop", max) {
                 margin: 0 45px 0 25px;
@@ -126,21 +126,26 @@
 }
 
 .support-self-security-item {
-    padding: 40px 120px;
+    min-height: 115px;
+    padding: 0px 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     cursor: pointer;
     transition: 500ms;
     &:hover {
         opacity: 0.6;
     }
     img {
-        width: 40px;
-        height: 40px;
+        width: 30px;
+        height: 30px;
         margin-bottom: 10px;
     }
     div {
-        font-size: 15px;
-        line-height: 16px;
+        font-size: 13px;
+        line-height: 19px;
         letter-spacing: -0.02em;
-        text-transform: uppercase;
+        text-transform: capitalize;
     }
 }
