--- a/src/styles/sass/page/_signup.scss
+++ b/src/styles/sass/page/_signup.scss
@@ -235,21 +235,54 @@
         justify-content: center;
         flex-direction: column;
         .mobile-input-field {
-            select {
-                margin-bottom: 0.5rem;
-                width: 120px;
-                margin-right: 10px;
-                -webkit-appearance: auto;
-                /*webkit browsers */
-                -moz-appearance: auto;
-                /*Firefox */
-                appearance: auto;
-            }
+            width: 400px;
             margin-top: 30px;
             font-size: 14px;
             display: flex;
             align-items: center;
             justify-content: center;
+            .country-code-select {
+                width: 240px;
+                margin-right: 10px;
+                position: relative;
+                .search-icon {
+                    position: absolute;
+                    top: 8px;
+                    width: 22px;
+                    left: 8px;
+                    z-index: 10;
+                    color: black !important;
+                }
+            }
+            .css-1s2u09g-control,
+            .css-1pahdxg-control {
+                svg {
+                    color: transparent !important;
+                }
+                flex-direction: row-reverse;
+                border-radius: unset;
+                .css-319lph-ValueContainer {
+                    justify-content: start;
+                    padding: 0 !important;
+                    .css-qc6sy-singleValue {
+                        font-family: "Montserrat";
+                        font-size: 13px;
+                    }
+                    @include mq("phone", max) {
+                        padding: 8px;
+                    }
+                }
+                .css-1hb7zxy-IndicatorsContainer {
+                    .css-1okebmr-indicatorSeparator {
+                        display: none;
+                    }
+                }
+                .css-6j8wv5-Input {
+                    input {
+                        color: transparent !important;
+                    }
+                }
+            }
         }
         button {
             margin-top: 30px;
