--- a/src/styles/sass/page/_verify-company.scss
+++ b/src/styles/sass/page/_verify-company.scss
@@ -59,12 +59,13 @@
 
 .verify-company {
     .languageDropdown {
+        width: 120px;
         position: absolute;
         right: 50px;
         top: 24px;
-        z-index: 200;
-        select {
-            padding: 6px;
+        z-index: 100;
+        svg {
+            color: black !important;
         }
     }
     &_container {
@@ -72,7 +73,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        height: calc(100vh - 100px);
+        height: calc(100vh - 110px);
     }
     .btn-primary:disabled {
         background-color: hsl(0, 0%, 12%) !important;
