--- a/src/styles/sass/page/admin/create/_auction.scss
+++ b/src/styles/sass/page/admin/create/_auction.scss
@@ -105,7 +105,7 @@ main.create-auction-page {
                 div.token_div {
                     display: flex;
                     justify-content: space-between;
-                    input {
+                    .white_input {
                         width: 35%;
                     }
                     div {
