--- a/src/styles/sass/page/_history.scss
+++ b/src/styles/sass/page/_history.scss
@@ -68,7 +68,7 @@
                     display: block;
                     padding-right: 20px;
                     tr {
-                        margin-bottom: 23px;
+                        // margin-bottom: 23px;
                         border-bottom: 2px solid #464646;
                         td {
                             padding: 16px 0;
