search in market tab fixed

--- a/src/styles/sass/page/admin/_common.scss
+++ b/src/styles/sass/page/admin/_common.scss
@@ -83,7 +83,7 @@ div.MuiPaper-root {
     }
 }
 
-.black_input {
+input.black_input {
     background-color: #1e1e1e;
     color: #ffffff;
     height: 32px;
