--- a/src/styles/sass/page/_history.scss
+++ b/src/styles/sass/page/_history.scss
@@ -323,6 +323,7 @@
                 .search {
                     display: flex;
                     justify-content: flex-start;
+                    border-bottom: 2px solid #464646;
                     .search-icon {
                         margin: 12px;
                         width: 20px;
@@ -337,21 +338,8 @@
                     }
                     .black_input {
                         width: 100%;
-                        border: unset;
-                        .css-1okebmr-indicatorSeparator {
-                            display: none;
-                        }
-                        .css-1sufdz7-control {
-                            min-height: 44px;
-                        }
-                        .css-21qapu-control {
-                            min-height: 44px;
-                            border: unset;
-                            box-shadow: none!important;
-                        }
-                        .css-tlfecz-indicatorContainer {
-                            display: none;
-                        }
+                        height: 44px;
+                        border: none;
                     }
                 }
                 thead,
@@ -384,13 +372,14 @@
                     }
                 }
                 tbody {
-                    @include custom-scroll(250px);
+                    @include custom-scroll(35vh);
                     @include mq("tablet", max) {
                         max-height: 350px;
                     }
                     display: block;
                     tr {
-                        border-top: 2px solid #464646;
+                        border-bottom: 2px solid #464646;
+                        cursor: pointer;
 
                         td {
                             div.echarts-for-react.echarts-for-echarts {
