Presale / Created the primary content

--- a/src/styles/sass/app.scss
+++ b/src/styles/sass/app.scss
@@ -33,6 +33,7 @@
 @import "page/purchase/home.scss";
 @import "page/purchase/homeWithSign.scss";
 @import "page/direct-purchase";
+@import "page/presale";
 
 // admin style
 @import "page/admin/common";
