--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -124,6 +124,10 @@ input[type="number"]::-webkit-outer-spin-button {
     padding-left: 55px;
     padding-right: 55px;
 }
+.px-100px {
+    padding-left: 100px;
+    padding-right: 100px;
+}
 .pl-8px {
     padding-left: 8px;
 }
