--- a/src/styles/sass/page/_presale.scss
+++ b/src/styles/sass/page/_presale.scss
@@ -1,4 +1,4 @@
-.direct-purchase {
+.presale {
     height: calc(100vh - 200px);
     display: flex;
     .btn-buy {
@@ -80,4 +80,10 @@
         text-align: right;
         letter-spacing: 0.01em;
     }
+}
+.gray-circle {
+    width: 25px;
+    height: 25px;
+    background-color: #c4c4c4;
+    border-radius: 100%;
 }
