--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -261,11 +261,10 @@
             .account-security {
                 margin-top: 32px;
                 .row {
-                    .col-md-6 {
+                    .col-md-4 {
                         padding: 25px 12px;
                         display: flex;
-                        align-items: center;
-                        border-bottom: 2px solid #464646;
+                        align-items: flex-start;
                         @include mq("phone", max) {
                             padding-left: 0;
                             padding-right: 0;
