--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -219,3 +219,7 @@ input[type="number"]::-webkit-outer-spin-button {
 .bg-black-10 {
     background-color: rgba(0, 0, 0, 0.1);
 }
+
+.ms-40px {
+    margin-left: 40px;
+}
