Wallet / Mobile / Fixed the transaction tab mobile styles

--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -239,3 +239,12 @@ input[type="number"]::-webkit-outer-spin-button {
     padding-top: 12px !important;
     padding-bottom: 12px !important;
 }
+
+.w-max-content {
+    width: max-content !important;
+}
+.w-sm-100 {
+    @include mq("phone") {
+        width: 100% !important;
+    }
+}
