--- a/src/styles/sass/page/_history.scss
+++ b/src/styles/sass/page/_history.scss
@@ -987,3 +987,10 @@
         }
     }
 }
+
+.green-bullet {
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+    background-color: $green;
+}
