--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -252,3 +252,7 @@ input[type="number"]::-webkit-outer-spin-button {
 .white-space-nowrap {
     white-space: nowrap !important;
 }
+
+.border-bottom-2-dark-gray {
+    border-bottom: 2px solid #464646;
+}
