--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -263,3 +263,16 @@ input[type="number"]::-webkit-outer-spin-button {
         box-shadow: 0px 0px 8px lightgrey;
     }
 }
+.hover\:scale-125 {
+    transition: 500ms;
+    &:hover {
+        transform: scale(1.25);
+    }
+}
+
+.bottom-20px {
+    bottom: 20px !important;
+}
+.end-20px {
+    right: 20px !important;
+}
