Profile / Account Details / KYC Verification / Changed the buttons and values and also added the circles

--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -276,3 +276,7 @@ input[type="number"]::-webkit-outer-spin-button {
 .end-20px {
     right: 20px !important;
 }
+
+.text-underline {
+    text-decoration: underline !important;
+}
