--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -921,3 +921,21 @@
     width: 18px;
     height: 18px;
 }
+
+.circle {
+    width: 15px;
+    height: 15px;
+    border-radius: 100%;
+    &-dark {
+        background-color: #333333;
+    }
+    &-success {
+        background-color: $green;
+    }
+    &-warning {
+        background-color: #f77500;
+    }
+    &-danger {
+        background-color: $red;
+    }
+}
