Payment / Stripe / Fixed API Integration

--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -280,3 +280,8 @@ input[type="number"]::-webkit-outer-spin-button {
 .text-underline {
     text-decoration: underline !important;
 }
+
+.icon-23px {
+    width: 23px;
+    height: 23px;
+}
